--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ github_username:  eirannejad
 
 # Build settings
 markdown: kramdown
-highlighter: pygments
+highlighter: rouge
 
 kramdown:
   input: GFM
