Updated to https

--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,17 @@
 # Site settings
 title: pyRevit blog
 email: eirannejad@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+
+# this means to ignore newlines until "baseurl:"
+description: >
   IronPython scripts for Autodesk Revit
-baseurl: "/pyRevit" # the subpath of your site, e.g. /blog
-url: "http://eirannejad.github.io" # the base hostname & protocol for your site
+
+# the subpath of your site, e.g. /blog
+baseurl: "/pyRevit"
+
+# the base hostname & protocol for your site
+url: "https://eirannejad.github.io"
+
 twitter:
   username: eirannejad
 github_username:  eirannejad
